fix: java version conflict